# c-level

./: .env.example  .gitignore  BACKLOG.md  C-Level_Mentor_Roadmap.docx  CLAUDE.md  README.md  WORKPLAN.md  briefing.md  docker-compose.yml  generate_roadmap.py  requirements.txt  roadmap_mentor_clevel.docx
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_knowledge_documents.py  003_add_initial_hypothesis.py  004_expand_file_types.py
backend/app/: main.py
backend/app/core/: audit_logger.py  auth.py  config.py  database.py  exceptions.py  framework_selector.py  game_theory.py  impact_scorer.py  state_machine.py
backend/app/llm/: __init__.py  cache.py  client.py  fallback.py  parser.py  prompt_builder.py  service.py
backend/app/models/: __init__.py  enums.py  financial_decision_case.py  knowledge_document.py
backend/app/schemas/: __init__.py
backend/app/services/: heuristics_service.py  intelligence_service.py  knowledge_base_service.py  relevance_validator.py  review_service.py  review_trigger.py
backend/cases/: simulation_cases.json  simulation_cases.md
backend/cases/heuristics/: initial_heuristics.json
backend/cases/reports/: consolidated_report.md  report_case01_reialocacao_orcamentaria.md  report_case02_renegociacao_ccbs.md  report_case03_gestao_liquidez.md  report_case04_capex_recife.md  report_case05_revisao_forecast.md
backend/cases/results/: case_01.json  case_02.json  case_03.json  case_04.json  case_05.json
backend/prisma/: schema.prisma  seed.ts
backend/scripts/: generate_reports.py  llm_reference_analyses.json  migrate-and-seed.sh  run_simulation.py  smoke_test.sh  update_docx.py  validate_cases.py
backend/src/: app.module.ts  main.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts
backend/src/financial-decision-cases/: financial-decision-cases.controller.ts  financial-decision-cases.module.ts  (+2 more)
(+112 files in other folders)
