[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mentor-cfo"
version = "1.0.0"
description = "Mentor C-Level CFO — Cognitive Decision Governance Engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "anthropic==0.40.0",
    "redis==5.2.1",
    "httpx==0.28.1",
    "python-multipart==0.0.20",
    "PyPDF2>=3.0,<4.0",
    "python-docx>=1.1,<2.0",
    "openpyxl>=3.1,<4.0",
    "python-pptx>=0.6.23,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "pytest-mock==3.14.0",
    "fakeredis==2.26.2",
    "aiosqlite==0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
